--- a/main-app/public/assets/pug/cr-eula.pug
+++ b/main-app/public/assets/pug/cr-eula.pug
@@ -1,12 +1,10 @@
-link(rel='stylesheet' href='/assets/css/main-page.css')
-
-.col.cr-eula-main-inner
-    p.copyright © 2021 Urbanity
-    .eula-links 
+.col.cr-eula-inner
+    p.cr-eula__copyright © 2021 Urbanity
+    .cr-eula__links 
         a(href="") Privacy Policy 
-    .eula-links 
+    .cr-eula__links 
         a(href="") Terms of Service
-    .eula-links 
+    .cr-eula__links 
         a(href="") Payment Processing 
-    .eula-links 
+    .cr-eula__links 
         a(href="") EULA
