--- a/main-app/public/includes/header.pug
+++ b/main-app/public/includes/header.pug
@@ -1,11 +1,11 @@
 link(rel='stylesheet' href='/assets/css/header.css')
 
-header
+header.header-container
     .navbar.navbar-dark.bg-dark.shadow-sm
         .container.header-container
             .row.header-row 
                 .col-md-2.header-logo
-                    a.navbar-brand.d-flex.align-items-center(href='#')
+                    a.navbar-brand.d-flex.align-items-center(href='/landing/a')
                         strong Urbanity
                 .col-md-8
                     .row.header-assets-outer
