--- a/main-app/public/assets/pug/main-card/main-card-text-single.pug
+++ b/main-app/public/assets/pug/main-card/main-card-text-single.pug
@@ -1,18 +1,15 @@
-link(href='/assets/css/main-page.css' rel='stylesheet')
-
-#main-card.card
-    .card-body
-        .content-header 
-            include /assets/pug/user-profile
-        .main-card-title
-            h5.card-title
-                a(href="https://www.vox.com/22558949/china-violence-asian-americans") The danger of anti-China rhetoric
-        .row.main-card-content 
-            p.card-text
+.post-card-wrap.card
+    .post-card-wrap-inner.card-body
+        .post-card-header 
+            include /assets/pug/post-header
+        .post-card-title
+            h5.post-card-title__text The danger of anti-China rhetoric
+        .row.post-card-content 
+            p.post-card-content__text
                 | Congress is currently weighing multiple bills aimed at bolstering US tech and science
                 | also pushing for more accountability on human rights abuses in China. They haven’t passed
                 | laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
                 | both chambers yet, but they’re expected to in the coming months — and they’re indicative
                 | of a renewed focus in Congress on confronting the Chinese government more directly.
-        .row.main-card-meta
+        .row.post-card-footer
             include /assets/pug/main-card/main-card-footer.pug
