--- a/main-app/public/landing/b/index.pug
+++ b/main-app/public/landing/b/index.pug
@@ -3,59 +3,19 @@ head
 	meta(charset='UTF-8')
 	meta(name='viewport' content='width=device-width, initial-scale=1.0')
 	meta(http-equiv='X-UA-Compatible' content='ie=edge')
-	link(href='/assets/style.css' rel='stylesheet')
-	link(rel='stylesheet' href='/assets/header.css')
-	link(href='/assets/landingA.css' rel='stylesheet')
+	link(href='/assets/css/style.css' rel='stylesheet')
+	link(href='/assets/css/header.css' rel='stylesheet')
+	link(href='/assets/css/main-page.css' rel='stylesheet')
 	meta(name='Description' content='Enter your description here')
 	title Title
 
 body
-	include ../../includes/header
-
-	.container
-		.main-body 
-			.row
-				.col-sm-3
-					#side-card.card
-						.card-body
-							.row.side-card-title
-								h5.card-title Trending Section
-							.row.side-card-user
-								h6.card-user Insert User
-							.row.side-card-content
-								p.card-text
-									| Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-									| ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-									| laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-									| velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-									| sunt in culpa qui officia deserunt mollit anim id est laborum.
-							.row.side-card-meta
-								span User
-								span Likes
-								span Comments
-				.col-sm-9
-					#main-card.card
-						.card-body
-							.content-header 
-								.profile-img
-									img.profile-pic(src='../../assets/default-avatar-icon.jpg')
-									.content-header-detail 
-										a 
-											span insert name 
-										.metadata
-											a 
-											span insert meta data
-							.row.main-card-title 
-								h5.card-title Title
-							.row.main-card-content 
-								p.card-text
-									| Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-									| ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-									| laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-									| velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-									| sunt in culpa qui officia deserunt mollit anim id est laborum.
-							.row.main-card-meta
-								span User
-								span Likes
-								span Comments
-							
+	.cursor-listener 
+		.side-bar-container  
+			include /assets/pug/side-bar/side-bar.pug
+		.main-container 
+			include /includes/header
+			.main-body 
+				.row
+					.col-md-12 
+						include /assets/pug/main-card/main-card-text-single.pug
