--- a/main-app/public/assets/pug/side-bar/side-bar.pug
+++ b/main-app/public/assets/pug/side-bar/side-bar.pug
@@ -1,6 +1,6 @@
 .side-bar-wrap
     input.toggle#side-bar-toggle__input(type="checkbox")
-    label.side-bar-toggle__text(for="side-bar-toggle__input") Click
+    //- label.side-bar-toggle__text(for="side-bar-toggle__input") Click
     .side-bar-collapsible.card-body
         .side-bar-collapsible-inner
             .row.side-bar-user-info
