--- a/main-app/public/assets/pug/main-card/main-card-text-infinite.pug
+++ b/main-app/public/assets/pug/main-card/main-card-text-infinite.pug
@@ -2,12 +2,12 @@
     .post-card-wrap-inner.card-body
         .post-card-header 
             include /assets/pug/post-header
-        a(href='/landing/b')
-            .post-card-clickable
-                .post-card-title
-                    h5.post-card-title__text
-                        a(href="/landing/b") The danger of anti-China rhetoric
-                .row.post-card-content 
+        .post-card-clickable
+            .post-card-title
+                h5.post-card-title__text
+                    a(href="/landing/b/index") The danger of anti-China rhetoric
+            .row.post-card-content
+                a.post-card-content-clickable(href="/landing/b") 
                     p.post-card-content__text
                         | Congress is currently weighing multiple bills aimed at bolstering US tech and science
                         | also pushing for more accountability on human rights abuses in China. They haven’t passed
@@ -15,4 +15,4 @@
                         | both chambers yet, but they’re expected to in the coming months — and they’re indicative
                         | of a renewed focus in Congress on confronting the Chinese government more directly.
         .row.post-card-footer
-            include /assets/pug/main-card/main-card-footer.pug
+            include /assets/pug/main-card/main-card-infinite-footer.pug
