--- a/main-app/public/index.pug
+++ b/main-app/public/index.pug
@@ -1,3 +1,4 @@
+doctype html
 head
 	meta(charset='UTF-8')
 	meta(http-equiv='Content-Type' content='text/html; charset=utf-8')
@@ -23,17 +24,19 @@ body
 					- var articles =  JSON.parse(articles)
 					each article in articles 
 						include /assets/pug/main-card/main-card-template.pug
-					button(id='load-more') Load More
-					script.
-						$(document).ready(function(){
-							$('#load-more').click(function(){
-								$.ajax({
-									url: "/api/articles?start=2", 
-									success: function(result){
-										$('#load-more').replaceWith(result);
-								}});
-							})		
-						});
+					#load-more
+						script.
+							$(document).ready(function(){
+								$(window).scroll(function () {
+										if ($(window).height() + $(window).scrollTop() == $(document).height() && $('#load-more').length){
+											$.ajax({
+												url: "/api/articles?start=2", 
+												success: function(result){
+													$('#load-more').replaceWith(result);
+											}});
+										}
+									}); 	
+								});
 					
 
 		footer.text-muted.py-5
