--- a/main-app/public/landing/a/index.pug
+++ b/main-app/public/landing/a/index.pug
@@ -18,24 +18,25 @@ body
 	//- 			header - expands and shrinks 
 	//- 			content
 	.cursor-listener 
-		//- .side-bar-container  
-		//- 	include /assets/pug/side-bar/side-bar.pug
+		.side-bar-container  
+			include /assets/pug/side-bar/side-bar.pug
+			
 		//- test code 
-		#side-bar 
-			.sidebar-header 
-				h3 Bootstrap Side bar
-			ul.list-unstyled.components 
-				p Dummy Heading 
-				li.active 
-					a.dropdown-toggle(href="#homeSubmenu" data-toggle="collapse" area-expanded="false") Home 
-					ul#homeSubmenu.collapse.list-unstyled
-						li 
-							a test1
-						li 
-							a test2
-				p Some stuff
+		//- #side-bar 
+		//- 	.sidebar-header 
+		//- 		h3 Bootstrap Side bar
+		//- 	ul.list-unstyled.components 
+		//- 		p Dummy Heading 
+		//- 		li.active 
+		//- 			a.dropdown-toggle(href="#homeSubmenu" data-toggle="collapse" area-expanded="false") Home 
+		//- 			ul#homeSubmenu.collapse.list-unstyled
+		//- 				li 
+		//- 					a test1
+		//- 				li 
+		//- 					a test2
+		//- 		p Some stuff
 		//- end test code 
-		.main-container 
+		.main-container#main-container
 			include /includes/header
 			.main-body 
 				.row
@@ -47,6 +48,3 @@ body
 						- var articles = JSON.parse(articles)
 						each article in articles
 							include /assets/pug/main-card/main-card-text-infinite-template.pug
-
-						include /assets/pug/main-card/main-card-text-infinite.pug
-						include /assets/pug/main-card/main-card-video.pug
